# FrameworkGame

./: CMakeLists.txt  README.md
doc/: klassendiagram.graphml
game/: button.cpp  core.cpp  core.h  drawsprite.cpp  drawsprite.h  gamescene.cpp  gamescene.h  main.cpp  object.cpp  object.h  optionscene.cpp  optionscene.h  pausehud.cpp  pausehud.h  player.cpp  player.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  settings.h  spawner.cpp  spawner.h  spike.cpp  spike.h  sprite.h  spriteobject.cpp  spriteobject.h  startscene.cpp  startscene.h  testobj.cpp  testobj.h  testscene.cpp  testscene.h  textsprite.cpp  textsprite.h
src/: main.cpp  resourcemanager.cpp  resourcemanager.h
